[aliases]
test = pytest

[bdist_wheel]
universal = 1

[tool:pytest]
addopts = --verbose -r s

[versioneer]
VCS = git
style = pep440
versionfile_source = gravityspy/_version.py
versionfile_build = gravityspy/_version.py
tag_prefix = v
parentdir_prefix = gravityspy-

[coverage:run]
source = gravityspy
omit =
	gravityspy/tests/*
	gravityspy/_version.py

[metadata]
license_file = LICENSE
